@@ -1,13 +1,43 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <!DOCTYPE KDevPrjSession>
 <KDevPrjSession>
- <DocsAndViews NumberOfDocuments="2" >
+ <DocsAndViews NumberOfDocuments="12" >
   <Doc0 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/Doxyfile" >
-   <View0 line="407" Type="Source" />
+   <View0 line="0" Type="Source" />
   </Doc0>
-  <Doc1 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/plugins/help/help.cpp" >
-   <View0 line="12" Type="Source" />
+  <Doc1 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/main6.cpp" >
+   <View0 line="24" Type="Source" />
   </Doc1>
+  <Doc2 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/iplugin.cpp" >
+   <View0 line="76" Type="Source" />
+  </Doc2>
+  <Doc3 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/pluginmanager.cpp" >
+   <View0 line="83" Type="Source" />
+  </Doc3>
+  <Doc4 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/pluginmodel.cpp" >
+   <View0 line="6" Type="Source" />
+  </Doc4>
+  <Doc5 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/pluginmodel.h" >
+   <View0 line="20" Type="Source" />
+  </Doc5>
+  <Doc6 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/configdialog.cpp" >
+   <View0 line="65" Type="Source" />
+  </Doc6>
+  <Doc7 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/plugin-demo.pro" >
+   <View0 line="5" Type="Source" />
+  </Doc7>
+  <Doc8 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/src/actiongrouplist.cpp" >
+   <View0 line="10" Type="Source" />
+  </Doc8>
+  <Doc9 NumberOfViews="1" URL="file:///usr/include/qt4/QtCore/qlist.h" >
+   <View0 line="73" Type="Source" />
+  </Doc9>
+  <Doc10 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/pluginmanager.h" >
+   <View0 line="44" Type="Source" />
+  </Doc10>
+  <Doc11 NumberOfViews="1" URL="file:///home/elcuco/src/svn/qtedit4/tools/qmdilib/demos/plugin-demo/configdialog.h" >
+   <View0 line="35" Type="Source" />
+  </Doc11>
  </DocsAndViews>
  <pluginList>
   <kdevdebugger>
